rust/suseconnect-agama/suseconnect-agama-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn announce_system(
        client_params: *mut ::std::os::raw::c_char,
        distro_target: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
    pub fn create_credentials_file(
        login: *mut ::std::os::raw::c_char,
        password: *mut ::std::os::raw::c_char,
        _unused_empty: *mut ::std::os::raw::c_char,
        credentials_file: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
    pub fn activate_product(
        product: *mut ::std::os::raw::c_char,
        client_params: *mut ::std::os::raw::c_char,
        email: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
    pub fn write_config(client_params: *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
    pub fn show_product(
        product: *mut ::std::os::raw::c_char,
        client_params: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
    pub fn reload_certificates() -> *mut ::std::os::raw::c_char;
}
